@@ -6,6 +6,12 @@ Types with sizeof > 16 bytes [1] or types which are not trivially-copyable [2] o
 This check will ignore shared pointers, you're on your own. Most of the times passing shared pointers by const-ref is the best thing to do, but occasionally that will lead to crashes if you're in a method that calls something else that makes the shared pointer ref count go down to zero.
 
 
+#### Fixits
+This check supports adding missing `&` or `const-&` with:
+
+    export CLAZY_FIXIT="fix-function-args-by-ref"
+
+
 - [1] <http://www.macieira.org/blog/2012/02/the-value-of-passing-by-value/>
 - [2] <http://en.cppreference.com/w/cpp/concept/TriviallyCopyable>
 - [3] <http://www.cplusplus.com/reference/type_traits/is_trivially_destructible/>
