@@ -99,6 +99,7 @@
     ifndef-define-typo
     lowercase-qml-type-name
   - New Fixits:
-    range-loop now supports adding missing refs or const-ref.
+    range-loop now supports adding missing refs or const-ref
+    function-args-by-ref now adding missing refs or const-ref (experimental)
   - Removed support for the obscure -DCLAZY_BUILD_UTILS_LIB to simplify the CMakeLists.txt
   - Renamed the clazy plugin from ClangLazy.so to ClazyPlugin.so
